scss/policies-view.scss
/*******************************************************************************
 * Licensed Materials - Property of IBM
 * (c) Copyright IBM Corporation 2018. All Rights Reserved.
 *
 * Note to U.S. Government Users Restricted Rights:
 * Use, duplication or disclosure restricted by GSA ADP Schedule
 * Contract with IBM Corp.
 *******************************************************************************/
@import 'node_modules/carbon-components/scss/globals/scss/_colors';
@import 'variables';


.policies-view {


}

.bx--search-input {
  background-color: $color__white;
}

.breadcrumb-link {
  font-weight: bold;
  color: $color__blue-51;
  font-size: 14px;
  padding: 0 4px;
  background-color: $color__white;
  box-shadow: none;
  &:hover {
    cursor: pointer;
  }
}

